tests/negative/gold/clashing_optional_test.gold
tests/negative/clashing_optional_test.toit:23:1: error: Function 'foo' with overlapping signature
foo --arg=0:
^~~
tests/negative/clashing_optional_test.toit:24:1: note: Overlaps with function 'foo'
foo --arg --arg2=0:
^~~
tests/negative/clashing_optional_test.toit:26:1: note: Overlaps with global 'foo'
foo := 0
^~~
tests/negative/clashing_optional_test.toit:28:1: note: Overlaps with function 'foo'
foo x=0 --arg:
^~~
tests/negative/clashing_optional_test.toit:24:1: error: Function 'foo' with overlapping signature
foo --arg --arg2=0:
^~~
tests/negative/clashing_optional_test.toit:28:1: note: Overlaps with function 'foo'
foo x=0 --arg:
^~~
tests/negative/clashing_optional_test.toit:31:1: error: Function 'bar' with overlapping signature
bar x [block] --named=0:
^~~
tests/negative/clashing_optional_test.toit:30:1: note: Overlaps with function 'bar'
bar x [block]:
^~~
tests/negative/clashing_optional_test.toit:33:1: error: Function 'bar' with overlapping signature
bar x=0:
^~~
tests/negative/clashing_optional_test.toit:32:1: note: Overlaps with global 'bar'
bar := 499
^~~
tests/negative/clashing_optional_test.toit:5:3: error: Constructor of class 'A' with overlapping signature
  constructor x y=0:
  ^~~~~~~~~~~
tests/negative/clashing_optional_test.toit:4:3: note: Overlapping constructor
  constructor x:
  ^~~~~~~~~~~
tests/negative/clashing_optional_test.toit:6:3: note: Overlapping constructor
  constructor x y --named=0: return A x
  ^~~~~~~~~~~
tests/negative/clashing_optional_test.toit:14:3: error: Redefinition of 'foo'
  foo := 0
  ^~~
tests/negative/clashing_optional_test.toit:8:3: note: First definition of 'foo'
  constructor.foo:
  ^~~~~~~~~~~
tests/negative/clashing_optional_test.toit:9:3: error: Constructor 'foo' with overlapping signature
  constructor.foo x=0:
  ^~~~~~~~~~~
tests/negative/clashing_optional_test.toit:8:3: note: Overlaps with constructor 'foo'
  constructor.foo:
  ^~~~~~~~~~~
tests/negative/clashing_optional_test.toit:11:3: note: Overlaps with method 'foo'
  foo --arg=0:
  ^~~
tests/negative/clashing_optional_test.toit:14:3: note: Overlaps with field 'foo'
  foo := 0
  ^~~
tests/negative/clashing_optional_test.toit:11:3: error: Method 'foo' with overlapping signature
  foo --arg=0:
  ^~~
tests/negative/clashing_optional_test.toit:8:3: note: Overlaps with constructor 'foo'
  constructor.foo:
  ^~~~~~~~~~~
tests/negative/clashing_optional_test.toit:12:3: note: Overlaps with method 'foo'
  foo --arg --arg2=0:
  ^~~
tests/negative/clashing_optional_test.toit:14:3: note: Overlaps with field 'foo'
  foo := 0
  ^~~
tests/negative/clashing_optional_test.toit:16:10: note: Overlaps with method 'foo'
  static foo x=0 --arg:
         ^~~
tests/negative/clashing_optional_test.toit:12:3: error: Method 'foo' with overlapping signature
  foo --arg --arg2=0:
  ^~~
tests/negative/clashing_optional_test.toit:16:10: note: Overlaps with method 'foo'
  static foo x=0 --arg:
         ^~~
tests/negative/clashing_optional_test.toit:19:3: error: Method 'bar' with overlapping signature
  bar x [block] --named=0:
  ^~~
tests/negative/clashing_optional_test.toit:18:10: note: Overlaps with method 'bar'
  static bar x [block]:
         ^~~
tests/negative/clashing_optional_test.toit:21:3: error: Method 'bar' with overlapping signature
  bar x=0:
  ^~~
tests/negative/clashing_optional_test.toit:20:10: note: Overlaps with static field 'bar'
  static bar := 499
         ^~~
Compilation failed.
